# homework6_Bohdan_Tsynalievskyi

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  main.py  pyproject.toml
DataProcessing/: process_data.py
