[tool.poetry]
name = "homework6"
version = "0.1.0"
description = "Homework 6 for Python course"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^5.0.0"
black = "^22.0.0"
isort = "^5.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
